--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "typescript": "^5.9.3"
-  }
+  },
+  "packageManager": "pnpm@10.29.1"
 }
